--- a/index.html
+++ b/index.html
@@ -141,28 +141,40 @@
 			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
 			
 			<div class="col-4">
-				<div class="ring-graph">
+				<div data-value="90" class="pie">
+					<div class="less-than-50"></div>
+					<div class="more-than-50"></div>
+					<div class="pie-center">90%</div>
 					90%
 				</div>
 				<h2>Web design</h2>
 			</div>
 			
 			<div class="col-4">
-				<div class="ring-graph">
+				<div data-value="75" class="pie">
+					<div class="less-than-50"></div>
+					<div class="more-than-50"></div>
+					<div class="pie-center"></div>
 					75%
 				</div>
 				<h2>HTML/CSS</h2>
 			</div>
 			
 			<div class="col-4">
-				<div class="ring-graph">
+				<div data-value="80" class="pie">
+					<div class="less-than-50"></div>
+					<div class="more-than-50"></div>
+					<div class="pie-center"></div>
 					80%
 				</div>
 				<h2>Graphic design</h2>
 			</div>
 			
 			<div class="col-4">
-				<div class="ring-graph">
+				<div data-value="75" class="pie">
+					<div class="less-than-50"></div>
+					<div class="more-than-50"></div>
+					<div class="pie-center"></div>
 					75%
 				</div>
 				<h2>UI/UIX</h2>
@@ -303,5 +315,9 @@
 		</div>
 	</section>
 	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/ring-graph.js" type="text/javascript"></script>
+	<script>
+		ringGraph();
+	</script>
 </body>
 </html>
