--- a/index.html
+++ b/index.html
@@ -140,44 +140,48 @@
 			<h1>Abbiamo delle capacit&agrave;!</h1>
 			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
 			
-			<div class="col-4">
+			<div class="col-4 skill">
 				<div data-value="90" class="pie">
-					<div class="less-than-50"></div>
-					<div class="more-than-50"></div>
-					<div class="pie-center">90%</div>
-					90%
-				</div>
-				<h2>Web design</h2>
-			</div>
-			
-			<div class="col-4">
-				<div data-value="75" class="pie">
-					<div class="less-than-50"></div>
-					<div class="more-than-50"></div>
+					<div class="background"></div>
+					<div class="less-than-50 ring"></div>
+					<div class="more-than-50 ring"></div>
 					<div class="pie-center"></div>
-					75%
+					<div class="value">90%</div>
 				</div>
-				<h2>HTML/CSS</h2>
+				<h3>Web design</h3>
 			</div>
 			
-			<div class="col-4">
+			<div class="col-4 skill">
+				<div data-value="75" class="pie">
+					<div class="background"></div>
+					<div class="less-than-50 ring"></div>
+					<div class="more-than-50 ring"></div>
+					<div class="pie-center"></div>
+					<div class="value">75%</div>
+				</div>
+				<h3>HTML/CSS</h3>
+			</div>
+			
+			<div class="col-4 skill">
 				<div data-value="80" class="pie">
-					<div class="less-than-50"></div>
-					<div class="more-than-50"></div>
+					<div class="background"></div>
+					<div class="less-than-50 ring"></div>
+					<div class="more-than-50 ring"></div>
 					<div class="pie-center"></div>
-					80%
+					<div class="value">80%</div>
 				</div>
-				<h2>Graphic design</h2>
+				<h3>Graphic design</h3>
 			</div>
 			
-			<div class="col-4">
+			<div class="col-4 skill">
 				<div data-value="75" class="pie">
-					<div class="less-than-50"></div>
-					<div class="more-than-50"></div>
+					<div class="background"></div>
+					<div class="less-than-50 ring"></div>
+					<div class="more-than-50 ring"></div>
 					<div class="pie-center"></div>
-					75%
+					<div class="value">75%</div>
 				</div>
-				<h2>UI/UIX</h2>
+				<h3>UI/UIX</h3>
 			</div>
 		</div>
 	</section>
@@ -318,6 +322,8 @@
 	<script src="js/ring-graph.js" type="text/javascript"></script>
 	<script>
 		ringGraph();
+		
+		
 	</script>
 </body>
 </html>
